# support_files/api_docs/swagger.json
@@ -107,6 +107,35 @@
                     }
                 }
             }
+        },
+        "/v1/language": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Account"
+                ],
+                "parameters": [
+                    {
+                        "description": "request body",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/homeRouters.ChangeLangRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/apiMixin.ResponseModel"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -199,6 +228,21 @@
                 },
                 "trace_id": {
                     "type": "string"
+                }
+            }
+        },
+        "homeRouters.ChangeLangRequest": {
+            "type": "object",
+            "required": [
+                "lang"
+            ],
+            "properties": {
+                "lang": {
+                    "type": "string",
+                    "enum": [
+                        "zh-Hans",
+                        "en"
+                    ]
                 }
             }
         }
